Gestion invite user interne ou externe

--- a/src/app/components/i18n/user/fr.json
+++ b/src/app/components/i18n/user/fr.json
@@ -193,6 +193,10 @@
   },
   "invitationPage": {
     "title": "Création de votre espace de travail",
+    "internal" : {
+        "title": "Partage d'espace de travail" 
+        
+    },
     
     "errorPage": {
       "title": "Ooops !",
