Amélioration fiche joueur et widget

--- a/src/app/components/i18n/effective/fr.json
+++ b/src/app/components/i18n/effective/fr.json
@@ -106,7 +106,8 @@
     "playerTelMobile": "Mobile",
     "playerTelHome": "Maison",
     "playerAddress": "Adresse",
-    "playerMail": "Email"
+    "playerMail": "Email",
+    "playerAge": "Age"  
   },
   "playerErrors": {
     "Firstname": "Le prénom du joueur est obligatoire",
