--- a/src/app/components/i18n/effective/en.json
+++ b/src/app/components/i18n/effective/en.json
@@ -107,7 +107,8 @@
     "playerTelMobile": "Mobile",
     "playerTelHome": "Home",
     "playerAddress": "Address",
-    "playerMail": "E-mail"
+    "playerMail": "E-mail",
+    "playerAge": "Age"  
   },
   "playerErrors": {
     "Firstname": "Firstname is mandatory",
