fixes QHBWEB-157 : captcha plante sur android 4.4.2 (huawei 7 avec Emui 3.0)

--- a/src/app/components/i18n/menu/en.json
+++ b/src/app/components/i18n/menu/en.json
@@ -40,18 +40,18 @@
   },
   "modal": {
     "login": {
-        "label": {
-            "login": "Login",
-            "password": "Password",
-            "signin": "Login",
-            "forgotpasswd": "Forgot password?",
-            "forgotpasswdmess": "These are things that happen, give us your login and we will reset it for you!",
-            "title": "Log on to <b>Qaobee</b>",
-            "forgotpasswdcancel": "Wait, I remember now!"
-        ,
+      "label": {
+        "login": "Login",
+        "password": "Password",
+        "signin": "Login",
+        "forgotpasswd": "Forgot password?",
+        "forgotpasswdmess": "These are things that happen, give us your login and we will reset it for you!",
+        "title": "Log on to <b>Qaobee</b>",
+        "forgotpasswdcancel": "Wait, I remember now!",
         "messageControl": {
-            "unregistreduser" : "Your account is not activate. look your mail"
+          "unregistreduser": "Your account is not activate. look your mail"
         }
+      }
     }
   }
 }
