--- a/src/app/components/i18n/user/en.json
+++ b/src/app/components/i18n/user/en.json
@@ -206,7 +206,7 @@
   },
   "invitationCancel": {
     "title": "Merci de votre visite",
-    "title": "Nous n'avons pas eu le temps de nous connaître. Laissez nous votre avec le bouton feedback",
+    "text": "Nous n'avons pas eu le temps de nous connaître. Laissez nous votre avec le bouton feedback",
     "buttonHome": "Accueil"  
   },
   "signupStartDonePage": {
