QHBWEB-20  : Gérer le contenu de la page home

--- a/src/app/components/i18n/menu/en.json
+++ b/src/app/components/i18n/menu/en.json
@@ -36,7 +36,9 @@
     "administration": "Administration",
     "signup": "Create an account",
     "param": "Settings",
-    "pricing": "Pricing"
+    "pricing": "Pricing",
+    "concept": "Concept",
+    "contact" : "Contact"
   },
   "modal": {
     "login": {
