QHBWEB-20  : Gérer le contenu de la page home

--- a/src/app/components/i18n/public/en.json
+++ b/src/app/components/i18n/public/en.json
@@ -41,8 +41,8 @@
       }
     },
     "area-4": {
-      "title": "Prochainement disponible.",
-      "content": "Téléchargez notre application sur votre mobile Android"
+      "iphone": "Soon available on the App Store",
+      "android": "Available on Google Play"
     }
   },
   "contact": {
