QHBWEB-20  : Gérer le contenu de la page home

--- a/src/app/components/i18n/public/fr.json
+++ b/src/app/components/i18n/public/fr.json
@@ -17,7 +17,7 @@
       }
     },
     "part-2": {
-      "title": "Qaobee facilite l'acquisition et l'analyse de la donnée sportive",
+      "title": "Découvrez le concept",
       "capture": "Captez",
       "analyze": "Analysez",
       "progress": "Progressez"
