QHBWEB-20 : Gérer le contenu de la page home

--- a/src/app/components/i18n/menu/en.json
+++ b/src/app/components/i18n/menu/en.json
@@ -38,7 +38,8 @@
     "param": "Settings",
     "pricing": "Pricing",
     "concept": "Concept",
-    "contact" : "Contact"
+    "contact" : "Contact",
+    "download" : "Download"
   },
   "modal": {
     "login": {
