--- a/src/app/components/i18n/menu/fr.json
+++ b/src/app/components/i18n/menu/fr.json
@@ -38,7 +38,8 @@
     "param": "Paramétrage",
     "pricing": "Tarifs",
     "concept": "Le concept",
-    "contact" : "Contact"
+    "contact" : "Contact",
+    "download" : "Téléchargement"
   },
   "modal": {
     "login": {
