--- a/src/app/components/i18n/public/fr.json
+++ b/src/app/components/i18n/public/fr.json
@@ -1,6 +1,7 @@
 {
   "landing": {
-    "main-title": "Captez et améliorez les performances de vos joueurs",
+    "main-title": "Maitrisez le moindre détail",
+    "calltoaction":"Démarrer maintenant !",  
     "sub-title": "Qu'attendez-vous ?",
     "manual-btn": "Mode d'emploi",
     "connect": "Restons connectés",
