--- a/src/app/components/i18n/public/fr.json
+++ b/src/app/components/i18n/public/fr.json
@@ -47,7 +47,7 @@
     },
     "area-5": {
       "title": "Pourquoi utiliser Qaobee",
-      "content": "Vous êtes un coach et vous peuvez <span class=\"accent-text-color\">capter</span> des statistiques depuis votre mobile ou votre tablette. Ces statistiques sont remontée dans notre interface Web avec laquelle vous pourrez les <span class=\"accent-text-color\">analyser</span>. Fort de ces métriques, vous allez pouvoir optimiser vos entraînements pour faire <span class=\"accent-text-color\">progresser</span> vos joueurs."
+      "content": "Vous êtes coach et vous souhaitez <span class=\"accent-text-color\">capter</span> des statistiques depuis votre mobile ou votre tablette. Ces statistiques sont remontées dans notre interface Web avec laquelle vous pourrez les <span class=\"accent-text-color\">analyser</span>. Fort de ces métriques, vous pourrez optimiser vos entraînements et faire <span class=\"accent-text-color\">progresser</span> vos joueurs."
     }
   },
   "contact": {
