--- a/src/app/components/i18n/public/fr.json
+++ b/src/app/components/i18n/public/fr.json
@@ -111,8 +111,8 @@
         },
         "shareWeb": {
           "title": "Un espace de travail partagé",
-          "detail": "Travaillez en équipe sur le même effectif",
-          "detail2": "Qaobee HB vous donne la possibilité d'inviter d'autres entraîneurs à votre espace."
+          "detail": "Travailler en équipe sur le même effectif",
+          "detail2": "L'application Web vous donne la possibilité d'inviter d'autres entraîneurs à votre espace. Rendez-vous dans le menu de votre profil. Vos collaborateurs peuvent aussi vous partager leur espace. A tout moment, vous pouvez basculer d'un espace à l'autre toujours via le menu Profil"
         },
         "appMob": "Une application mobile pour",
         "teamMob": {
