--- a/src/app/components/i18n/public/fr.json
+++ b/src/app/components/i18n/public/fr.json
@@ -1,8 +1,8 @@
 {
   "landing": {
-    "main-title": "Connaissez-vous vraiment les performances de vos joueurs ?",
+    "main-title": "Connaissez-vous la performance de vos joueurs ?",
     "calltoaction":"Démarrer maintenant !",  
-    "sub-title": "Qu'attendez-vous ?",
+    "sub-title": "Qaobee HB s'adresse aux entraîneurs souhaitant s'appuyer sur les statistiques  pour améliorer les performances de son effectif",
     "manual-btn": "Mode d'emploi",
     "connect": "Restons connectés",
     "legals": "Mentions légales",
