--- a/src/app/components/i18n/public/fr.json
+++ b/src/app/components/i18n/public/fr.json
@@ -1,8 +1,8 @@
 {
   "landing": {
     "main-title": "Connaissez-vous la performance de vos joueurs ?",
-    "calltoaction":"Démarrer maintenant !",  
-    "sub-title": "Qaobee HB s'adresse aux entraîneurs souhaitant s'appuyer sur les statistiques  pour améliorer les performances de son effectif",
+    "calltoaction":"Démarrer",  
+    "sub-title": "Qaobee HB permet aux entraîneurs de handball de collecter les statistiques de leurs joueurs durant les matchs, ou les entraînements",
     "manual-btn": "Mode d'emploi",
     "connect": "Restons connectés",
     "legals": "Mentions légales",
@@ -19,13 +19,13 @@
     },
     "part-2": {
       "title": "Découvrez le concept",
-      "capture": "Observez",
+      "capture": "Collectez",
       "analyze": "Analysez",
       "progress": "Progressez"
     },
     "area-3": {
       "item-0": {
-        "title": "Téléchargement gratuit",
+        "title": "Télécharger l'application de collecte",
         "content": "Disponible sur Google Play et bientôt sur l'App Store, Qaobee est la solution idéale pour l'analyse des données sportives liées au handball. L'application fonctionne aussi bien sur téléphone que sur tablette."
       },
       "item-1": {
@@ -107,11 +107,11 @@
         },
         "statsWeb": {
           "title": "Analyser les statistiques",
-          "detail": "Consultez les performances d'un joueur. Efficacité au tir, impacts préférentiels,temps de jeu, agressivité, apport offensif et défensif. Comparez les performances de vos joueurs entre-eux. Profitez des mêmes fonctionnalités au niveau des équipes et des matchs."
+          "detail": "Consultez les performances de vos joueurs. Efficacité au tir, impacts préférentiels,temps de jeu, agressivité, apport offensif et défensif. Comparez les performances de vos joueurs entre-eux. Profitez des mêmes fonctionnalités au niveau des équipes et des matchs."
         },
         "shareWeb": {
           "title": "Un espace de travail partagé",
-          "detail": "Travailler en équipe sur le même effectif",
+          "detail": "Travailler en équipe avec le même effectif",
           "detail2": "L'application Web vous donne la possibilité d'inviter d'autres entraîneurs à votre espace. Rendez-vous dans le menu de votre profil. Vos collaborateurs peuvent aussi vous partager leur espace. A tout moment, vous pouvez basculer d'un espace à l'autre toujours via le menu Profil"
         },
         "appMob": "Une application mobile pour",
@@ -129,7 +129,7 @@
         },
         "statsMob": {
           "title": "Consulter les statistiques du match en temp réel",
-          "detail": "Vous pouvez consulter en temps réel les statistiques d'un match. A la mi-temps, vous pourrez argumenter votre discours en vous appuyant sur les statistiques collectées."
+          "detail": "Vous pouvez consulter en temps réel les statistiques d'un match. A la mi-temps, adaptez votre discours en vous appuyant sur les statistiques collectées."
         }
       }
     }
